--- a/requirements/requirements-dev.txt
+++ b/requirements/requirements-dev.txt
@@ -407,6 +407,8 @@ matplotlib-inline==0.1.7
     # via
     #   ipykernel
     #   ipython
+maturin[patchelf]==1.5.1
+    # via -r ./requirements/requirements-dev.in
 mccabe==0.7.0
     # via flake8
 mdurl==0.1.2
@@ -493,6 +495,7 @@ numpy==1.26.4
     # via
     #   contourpy
     #   matplotlib
+    #   pandas
 omegaconf==2.3.0
     # via
     #   dvc
@@ -521,10 +524,14 @@ packaging==24.0
     #   sphinx
 paginate==0.5.6
     # via mkdocs-material
+pandas==2.2.2
+    # via -r ./requirements/requirements-dev.in
 pandocfilters==1.5.1
     # via nbconvert
 parso==0.8.4
     # via jedi
+patchelf==0.17.2.1
+    # via maturin
 pathspec==0.12.1
     # via
     #   black
@@ -635,8 +642,11 @@ python-dateutil==2.9.0.post0
     #   ghp-import
     #   jupyter-client
     #   matplotlib
+    #   pandas
 python-json-logger==2.0.7
     # via jupyter-events
+pytz==2024.1
+    # via pandas
 pyyaml==6.0.1
     # via
     #   jupyter-events
@@ -827,7 +837,9 @@ typing-extensions==4.11.0
     #   pydantic-core
     #   typer
 tzdata==2024.1
-    # via celery
+    # via
+    #   celery
+    #   pandas
 uri-template==1.3.0
     # via jsonschema
 urllib3==2.2.1
