--- a/rust/pso/Cargo.toml
+++ b/rust/pso/Cargo.toml
@@ -9,3 +9,4 @@ rand = "0.8"
 ndarray = "0.15.6"
 polars = { version = "0.40.0", features = ["lazy", "ndarray", "temporal"] }
 lazy_static = "1.4.0"
+more-asserts = "0.3.1"
