--- a/rust/optimization_server/Cargo.toml
+++ b/rust/optimization_server/Cargo.toml
@@ -13,6 +13,7 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 meval = "0.2"
 ordered-float = "2.1"
+validator = { version = "0.18", features = ["derive"] }
 
 [lib]
 name = "optimization_server"
