--- a/docker/optimization_server/nginx.conf
+++ b/docker/optimization_server/nginx.conf
@@ -1,12 +1,20 @@
-server {
-    listen 80;
-    server_name my-server.com; # Replace with your domain or IP
+# /etc/nginx/nginx.conf
 
-    location / {
-        proxy_pass http://localhost:8080;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
+events {
+    worker_connections 1024;
+}
+
+http {
+    server {
+        listen 80;
+        server_name my-server.com; # Replace with your domain or IP
+
+        location / {
+            proxy_pass http://server:8080; # Note: use "server" which is the service name in docker-compose.yml
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
     }
 }
