--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,3 +13,31 @@ services:
       - ./docker/optimization_server/nginx.conf:/etc/nginx/nginx.conf
     depends_on:
       - server
+
+  # PostgreSQL database service
+  db:
+    image: postgres:12-20-alpine3.20  # Use the PostgreSQL 12 image
+    environment:
+      POSTGRES_DB: my_database  # Name of the database
+      POSTGRES_USER: my_user    # Username for the database
+      POSTGRES_PASSWORD: my_password  # Password for the database
+    ports:
+      - "5432:5432"  # Expose the PostgreSQL port
+    volumes:
+      - postgres_data:/var/lib/postgresql/data  # Persist database data
+
+  # Service to populate the database
+  query_service:
+    build:
+      context: ./  # Set the context to the root of the project
+      dockerfile: ./docker/query_service/Dockerfile  # Dockerfile location
+    depends_on:
+      - db  # Ensure the database is ready before running the query service
+    environment:
+      DATABASE_URL: postgres://my_user:my_password@db:5432/my_database
+    volumes:
+      - ./query_service:/usr/src/app
+
+# Define a named volume to persist PostgreSQL data
+volumes:
+  postgres_data:
